src/test/custom/valid/struct/structEmpty.wacc
# Output:
# 1

# Program:

begin
  struct a is {b b}
  struct b is {int i}
  a a = empty;
  a = new a (empty);
  a.b = new b (1);
  println a.b.i
end