src/test/custom/invalid/struct/structElemTypeWrong.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {int i}
  a x = new a {'a'}
end